--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instagram-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://alexanderfluna.github.io/instagram-clone",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -20,8 +21,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4",
-    "yarn": "^1.22.19",
-    "homepage": "http://alexanderfluna/github.io/instagram-clone"
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
